Add code of container module